--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,8 +1,5 @@
 <ion-header>
 	<ion-navbar>
-		<button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
 		<ion-title>Login</ion-title>
 	</ion-navbar>
 </ion-header>
@@ -15,7 +12,7 @@
 	<form #loginForm="ngForm" novalidate>
 		<ion-list no-lines>
 			<ion-item>
-				<ion-label stacked color="primary">Username</ion-label>
+				<ion-label floating color="primary">Username</ion-label>
 				<ion-input [(ngModel)]="login.username" name="username" type="text" #username="ngModel" spellcheck="false" autocapitalize="off"
 					required>
 				</ion-input>
@@ -25,7 +22,7 @@
 			</p>
 
 			<ion-item>
-				<ion-label stacked color="primary">Password</ion-label>
+				<ion-label floating color="primary">Password</ion-label>
 				<ion-input [(ngModel)]="login.password" name="password" type="password" #password="ngModel" required>
 				</ion-input>
 			</ion-item>
@@ -34,12 +31,9 @@
 			</p>
 		</ion-list>
 
-		<ion-row responsive-sm>
+		<ion-row responsive-sm padding>
 			<ion-col>
 				<button ion-button (click)="onLogin(loginForm)" type="submit" block>Login</button>
-			</ion-col>
-			<ion-col>
-				<button ion-button (click)="onSignup()" color="light" block>Signup</button>
 			</ion-col>
 		</ion-row>
 	</form>
